<resources>
    <string name="app_name">CredNote</string>
    <string name="action_settings">Settings</string>
    <string name="new_invoice">Create New Invoice</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="general_instruction">Click the floating action button to create a credit note</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_new_invoice">NewInvoiceActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="label_company_address">Company Address</string>
    <string name="label_gstinNumber">GSTIN</string>
    <string name="label_state">State</string>
    <string name="label_stateCode">State Code</string>
    <string name="label_save">Save</string>
    <string name="label_edit">Edit</string>
    <string name="label_required">Required</string>
    <string name="label_company">Company</string>
    <string name="party">Party</string>
    <string name="label_invoice_number">Invoice Number</string>
    <string name="label_invoice_date">Invoice Date (dd/mm/yyyy)</string>
    <string name="label_delivery_note">Delivery Note</string>
    <string name="label_mode_of_payment">Mode of payment</string>
    <string name="label_supplier_ref">Supplier\'s ref</string>
    <string name="label_other_ref">Other Ref</string>
    <string name="label_order_number">Buyer\'s Order Number</string>
    <string name="label_order_date">Dated (dd/mm/yyyy)</string>
    <string name="label_dispatch_doc_number">Dispatch Document No.</string>
    <string name="label_delivery_note_date">Delivery Note Date (dd/mm/yyyy)</string>
    <string name="label_dispatch_through">Dispatched Through</string>
    <string name="label_destination">Destination</string>
    <string name="terms_of_delivery">Terms of Delivery</string>
    <string name="label_invoiceDetails">Invoice Details</string>
    <string name="label_description_of_goods">Description of Goods</string>
    <string name="label_hsn">HSN Code</string>
    <string name="label_hsn_short">HSN</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_rate">rate</string>
    <string name="label_per">per</string>
    <string name="label_disc">Discount %</string>
    <string name="label_amount">Amount</string>
    <string name="label_remove">Remove</string>
    <string name="label_add">Add</string>
    <string name="label_taxable_amount">Taxable Amount</string>
    <string name="label_central_tax_rate">Central Tax Rate</string>
    <string name="label_central_tax_amount">Central Tax Amount</string>
    <string name="label_state_tax_rate">State Tax Rate</string>
    <string name="label_state_tax_amount">State Tax Amount</string>
    <string name="label_tax_amount">Total Tax Amount</string>
    <string name="GoodsDetails">Goods Details</string>
    <string name="hsnDetails">HSN Details</string>
    <string name="label_cgst_amount">CGST \u20B9</string>
    <string name="label_sgst_amount">SGST \u20B9</string>
    <string name="label_roundOff">Round Off \u20B9</string>
    <string name="label_total">Total \u20B9</string>
    <string name="label_total_taxable_amount">Total Taxable Amount \u20B9</string>
    <string name="label_total_central_tax_amount">Total Central Tax Amount \u20B9</string>
    <string name="label_total_state_tax_amount">Total Sales Tax Amount \u20B9</string>
    <string name="label_total_tax_amount">Total Tax Amount</string>
    <string name="taxTotals">Tax Totals</string>
    <string name="label_recalculate">Evaluate</string>
    <string name="FORM_NOT_SAVED">form not saved</string>
    <string name="BACK_CONFIRM">Do you want to exit?\n\nAll your changes will be discarded</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="CGST">CGST</string>
    <string name="label_recalculate_this">Evaluate Present Values</string>
    <string name="label_recalculate_locked">Evaluate From Locked Forms</string>
    <string name="label_goods_amount">Total Goods Amount \u20B9</string>
    <string name="label_get_goods_total">Get Goods Amount Total</string>
    <string name="label_get_values">Get Values</string>
    <string name="label_total_InWords">Total Amount In Words</string>
    <string name="preview">Preview</string>
    <string name="HSN_SAC">HSN/ SAC</string>
    <string name="central_tax">Central Tax</string>
    <string name="state_tax">State Tax</string>
    <string name="Rate">Rate</string>
    <string name="serial_number">Sl. No.</string>
    <string name="unit">per</string>
    <string name="CREDIT_NOTE">Credit Note</string>
    <string name="label_disc_short">Disc %</string>
    <string name="rupee_symbol">₹</string>
    <string name="AMOUNT_CHARGEABLE_IN_WORDS">Amount chargeable in words:</string>
    <string name="DECLERATION">Declaration:\nWe declare that this invoice shows the actual price of the goods described and that all particulars are true and correct</string>
    <string name="FOR">For</string>
    <string name="Authorised_Signatory">Authorised Signatory</string>
    <string name="terms_Of_Delivery">Terms of Delivery:</string>
    <string name="GSTIN">GSTIN</string>
    <string name="state_code">State Code</string>
    <string name="this_is_a_computer_generated_invoice">This is a computer generated invoice</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="settings_organization_header">Organization Details</string>
    <string name="settings_document_header">Document</string>

    <!-- Messages Preferences -->
    <string name="organization_name">Name Of Your Organization</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="print_hsn_fill">Include HSN details in document</string>
    <string name="hsn_fill_setting_summary">Turn on to include individual HSN details as part of the credit note</string>
    <string name="autofill_company">Autofill Company Details</string>
    <string name="autofill_company_setting_summary">Turn on to autofill company details from preference</string>
</resources>