<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:androidx="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_organization_header">

        <SwitchPreferenceCompat
            app:key="isCompanyAutofill"
            app:title="@string/autofill_company"
            app:summary="@string/autofill_company_setting_summary"/>

        <EditTextPreference
            app:key="orgName"
            app:title="@string/label_company_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="orgAddress"
            app:title="@string/label_company_address"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="orgGstin"
            app:title="@string/label_gstinNumber"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="orgState"
            app:title="@string/label_state"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="orgStateCode"
            androidx:inputType="numberDecimal"
            androidx:digits="0123456789"
            androidx:defaultValue="0"
            app:title="@string/label_stateCode"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_document_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/print_hsn_fill"
            app:summary="@string/hsn_fill_setting_summary"/>
    </PreferenceCategory>

</PreferenceScreen>