<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.InvoiceDetailsFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/scroll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/invoiceNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_invoice_number"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/invoiceDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_invoice_date"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="date"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deliveryNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_delivery_note"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/modeOfPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_mode_of_payment"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/supplierRef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_supplier_ref"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otherRef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_other_ref"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/orderNumber"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_order_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/orderDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_order_date"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dispathDocNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_dispatch_doc_number"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deliveryNoteDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_delivery_note_date"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dispatchThrough"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_dispatch_through"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_destination"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/termsOfDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/terms_of_delivery"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="3"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveOrg"
                android:layout_margin="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/stateCode"
                android:layout_alignParentRight="true"
                android:text="@string/label_save" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>